# hkserver

./: .gitignore  .gitmodules  Cargo.toml  Info.plist  README.md  Xargo.toml  build.rs  build.sh  entitlements.plist
.cargo/: config
HKServer/: Podfile  build.sh
HKServer/HKServer/: ContentView.swift  HKServer.swift  HKServerApp.swift  HKServerCommand.swift  HomeController.swift  HomeKitServiceProvider.swift  Info.plist
HKServer/HKServer.xcodeproj/: project.pbxproj
HKServer/HKServer.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
HKServer/HKServer.xcodeproj/project.xcworkspace/xcuserdata/shaheen.xcuserdatad/: UserInterfaceState.xcuserstate
HKServer/HKServer.xcodeproj/xcshareddata/xcschemes/: hkserver.xcscheme
HKServer/HKServer.xcodeproj/xcuserdata/shaheen.xcuserdatad/xcschemes/: xcschememanagement.plist
HKServer/HKServerTests/: HKServerTests.swift
HKServer/HKServerUITests/: HKServerUITests.swift
HKServer/hkserver.xcworkspace/: contents.xcworkspacedata
HKServer/hkserver.xcworkspace/xcshareddata/swiftpm/: Package.resolved
hkctl/: Cargo.toml  build.rs
hkctl/src/: accessories.rs  action_sets.rs  hkservice.rs  homes.rs  main.rs  room.rs  rooms.rs  service_groups.rs  services.rs  triggers.rs  zones.rs
hkserver-rs/: Cargo.toml  README.md  build.rs  hkrpc_shaheenmbp.provisionprofile
hkserver-rs/.cargo/: config.toml
hkserver-rs/src/: hkservice.rs
hkutils.xcworkspace/: contents.xcworkspacedata
protos/: hkserver.proto
rust/: Cargo.toml  build.sh
src/: client.rs  hkservice.rs  main.rs  server.rs
