[package]
name = "hkctl"
version = "0.1.0"
authors = ["Shaheen Gandhi <shaheen@fb.com>"]
edition = "2018"
description = "A command line porcelain for managing HomeKit"

[dependencies]
chrono = "0.4.19"
clap = "3.0.0-beta.2"
hex = "0.4.2"
prost = "0.6.1"
protobuf = "2.18.1"
simple-error = "0.2.3"
tokio = { version = "0.2.24", features = ["full"] }
tonic = { version = "0.3.1", features = ["transport", "tls", "codegen"] }

[build-dependencies]
tonic-build = "0.3.1"
build-deps = "0.1.4"
