[package]
name = "hkrpc"
version = "0.1.0"
authors = ["Shaheen Gandhi <visigoth@gmail.com>"]
edition = "2018"
description = "A gRPC server for HomeKit"

[dependencies]
clap = "2.33.3"
prost = "0.6.1"
protobuf = "2.18.1"
tokio = { version = "0.2.24", features = ["full"] }
tonic = { version = "0.3.1", features = ["transport", "tls", "codegen"] }
fruity = { version = "0.2.0", path = "../../fruity", features = ["objc", "foundation", "home_kit"] }

[build-dependencies]
tonic-build = "0.3.1"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[patch.crates-io]
ring = { git = "https://github.com/visigoth/ring", branch = "mac-catalyst" }

[package.metadata.bundle.bin.server]
name = "hkserver"
identifier = "io.github.visigoth.hkrpc.server"
plist_table = { NSHomeKitUsageDescription = "Application server to manage HomeKit" }
